--- a/css/newtab.css
+++ b/css/newtab.css
@@ -38,7 +38,8 @@ body {
 }
 
 .image {
-	background-size: cover;
+	background-size: contain;
+	background-position: center;
 	background-repeat: no-repeat;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
