--- a/css/newtab.css
+++ b/css/newtab.css
@@ -1,156 +1,159 @@
 body {
-	color: #444;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	font-size: 0.8em;
-	margin: 0;
+    color: #444;
+    font-family: 'Trebuchet MS', Helvetica, sans-serif;
+    font-size: 0.8em;
+    margin: 0;
 }
 
 #content {
-	text-align: center;
+    text-align: center;
 }
 
 #dial {
-	display: inline-block;
+    display: inline-block;
 }
 
 .entry {
-	float: left;
-	border: 7px solid transparent;
+    float: left;
+    border: 7px solid transparent;
 }
 
 .entry:hover {
-	border: 7px solid rgba(53, 191, 256, 0.5);
-	border-radius: 12px;
+    border: 7px solid rgba(53, 191, 256, 0.5);
+    border-radius: 12px;
 }
 
 .bookmark {
-	background: #fff;
-	box-shadow: 2px 2px 2px #aaa;
-	border-radius: 5px;
-	float: left;
-	height: 100%;
-	width: 100%;
-	text-decoration: none;
+    background: #fff;
+    box-shadow: 2px 2px 2px #aaa;
+    border-radius: 5px;
+    float: left;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
 }
 
 .entry .bookmark:hover {
-	color: #444;
+    color: #444;
 }
 
 .image {
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .custom-icon {
-	background-size: contain;
-	background-position: center;
+    background-size: contain;
+    background-position: center;
 }
 
 .details {
-	border-collapse: collapse;
-	width: 100%;
+    border-collapse: collapse;
+    width: 100%;
 }
 
 td {
-	opacity: 0.6;
+    opacity: 0.6;
 }
 
-.edit, .remove {
-	opacity: 0.0;
-	width: 1em;
+.edit,
+.remove {
+    opacity: 0;
+    width: 1em;
 }
 
-.entry:hover .details .edit, .entry:hover .details .remove {
-	opacity: 0.25;
+.entry:hover .details .edit,
+.entry:hover .details .remove {
+    opacity: 0.25;
 }
 
-.entry:hover .details .edit:hover, .entry:hover .details .remove:hover {
-	opacity: 0.6;
+.entry:hover .details .edit:hover,
+.entry:hover .details .remove:hover {
+    opacity: 0.6;
 }
 
 .details .title {
-	vertical-align: baseline;
-	color: #222;
-	font-size: 1em;
-	font-weight: bold;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
+    vertical-align: baseline;
+    color: #222;
+    font-size: 1em;
+    font-weight: bold;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .entry:hover .title {
-	opacity: 0.9;
+    opacity: 0.9;
 }
-
 
 #new_entry div {
-	background-color: #aaa;
-	border-radius: 5px;
-	height: 100%;
+    background-color: #aaa;
+    border-radius: 5px;
+    height: 100%;
 }
 
-.foundicon-folder, .foundicon-plus {
-	position: relative;
+.foundicon-folder,
+.foundicon-plus {
+    position: relative;
 }
 
 #bookmark_form h1 {
-	font-size: 1.5em;
+    font-size: 1.5em;
 }
 
 #bookmark_form p {
-	display: flex;
-	align-items: center;
-	margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 #bookmark_form span {
-	width: 120px;
-	text-align: right;
-	margin-right: 10px;
-	font-weight: bold;
+    width: 120px;
+    text-align: right;
+    margin-right: 10px;
+    font-weight: bold;
 }
 
-#bookmark_form input[type="text"],
-#bookmark_form input[type="color"] {
-	width: 300px;
-	padding: 5px;
+#bookmark_form input[type='text'],
+#bookmark_form input[type='color'] {
+    width: 300px;
+    padding: 5px;
 }
 
-#bookmark_form input[type="checkbox"] {
-	width: auto;
-	height: auto;
-	margin: 0;
+#bookmark_form input[type='checkbox'] {
+    width: auto;
+    height: auto;
+    margin: 0;
 }
 
 #bookmark_form button {
-	width: 10em;
-	height: 2em;
-	font-size: 110%;
+    width: 10em;
+    height: 2em;
+    font-size: 110%;
 }
 
 #options {
-	position: absolute;
-	right: 0px;
-	top: -5px;
+    position: absolute;
+    right: 0px;
+    top: -5px;
 }
 
 #options a {
-	font-size: 5em;
-	color: #aaa;
-	text-decoration: none;
+    font-size: 5em;
+    color: #aaa;
+    text-decoration: none;
 }
 
 #options a:hover {
-	color: #888;
-	text-shadow: 0px 0px 10px rgba(53, 191, 255, 0.6);
+    color: #888;
+    text-shadow: 0px 0px 10px rgba(53, 191, 255, 0.6);
 }
 
 #folder_list {
-	margin: 20px auto 10px auto;
-	min-width: 20em;
-	max-width: 30%;
+    margin: 20px auto 10px auto;
+    min-width: 20em;
+    max-width: 30%;
 }
