--- a/css/reveal.css
+++ b/css/reveal.css
@@ -2,41 +2,41 @@
 	Reveal Modals
 	-------------------------------------------------- */
 
-	.reveal-modal-bg {
-		position: fixed;
-		height: 100%;
-		width: 100%;
-		background: rgba(0,0,0,.8);
-		z-index: 100;
-		display: none;
-		top: 0;
-		left: 0;
-		}
+.reveal-modal-bg {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 100;
+    display: none;
+    top: 0;
+    left: 0;
+}
 
-	.reveal-modal {
-		visibility: hidden;
-		top: 200px;
-		left: 50%;
-		margin-left: -300px;
-		width: 520px;
-		background: #fff no-repeat -200px -80px;
-		position: absolute;
-		z-index: 101;
-		padding: 30px 40px 34px;
-		border-radius: 5px;
-		}
+.reveal-modal {
+    visibility: hidden;
+    top: 200px;
+    left: 50%;
+    margin-left: -300px;
+    width: 520px;
+    background: #fff no-repeat -200px -80px;
+    position: absolute;
+    z-index: 101;
+    padding: 30px 40px 34px;
+    border-radius: 5px;
+}
 
-	.reveal-modal .close {
-		font-size: 2.5em;
-		line-height: 0.3em;
-		position: absolute;
-		top: 0.3em;
-		right: 0.3em;
-		color: #aaa;
-		font-weight: bold;
-		cursor: pointer;
-		}
-	/*
+.reveal-modal .close {
+    font-size: 2.5em;
+    line-height: 0.3em;
+    position: absolute;
+    top: 0.3em;
+    right: 0.3em;
+    color: #aaa;
+    font-weight: bold;
+    cursor: pointer;
+}
+/*
 
 	NOTES
 
